chore: implement assign04

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "editor.semanticHighlighting.enabled": false,
     "files.associations": {
         "ostream": "cpp",
         "atomic": "cpp",
