--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "editor.semanticHighlighting.enabled": false,
+    "editor.fontFamily": "JetBrains Mono Medium",
+    "editor.fontSize": 14,
     "files.associations": {
         "ostream": "cpp",
         "atomic": "cpp",
